--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "NODE_ENV=prod node ./bin/www",
-    "start-dev": "NODE_ENV=dev node ./bin/www"
+    "start": "node_modules/pm2/bin/pm2 restart processes.json",
+    "start-dev": "node_modules/pm2/bin/pm2 restart processes.json --env dev"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
-    "morgan": "~1.6.1"
+    "morgan": "~1.6.1",
+    "pm2": "^1.1.3"
   }
 }
