--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "fs": "0.0.2",
     "https": "^1.0.0",
     "morgan": "~1.6.1",
-    "pm2": "^1.1.3"
+    "pm2": "^1.1.3",
+    "request": "^2.72.0"
   }
 }
