--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "private": true,
   "scripts": {
     "start": "node_modules/pm2/bin/pm2 restart processes.json",
-    "start-dev": "node_modules/pm2/bin/pm2 restart processes.json --env dev"
+    "start-dev": "node_modules/pm2/bin/pm2 restart processes.json --env dev",
+    "test": "node_modules/mocha/bin/mocha --require intelli-espower-loader test/*.js"
+  },
+  "directories": {
+    "test": "test/"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
@@ -17,5 +21,10 @@
     "morgan": "~1.6.1",
     "pm2": "^1.1.3",
     "request": "^2.72.0"
+  },
+  "devDependencies": {
+    "intelli-espower-loader": "^1.0.1",
+    "mocha": "^2.5.3",
+    "power-assert": "^1.4.1"
   }
 }
