--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "~4.13.1",
     "fs": "0.0.2",
     "https": "^1.0.0",
+    "moment": "^2.13.0",
     "morgan": "~1.6.1",
     "node-cron": "^1.1.1",
     "pm2": "^1.1.3",
